--- a/views/explorer.ejs
+++ b/views/explorer.ejs
@@ -127,36 +127,38 @@
                 <div class="tab-content" id="nav-tabContent">
                     <div class="tab-pane fade show active" id="nav-places" role="tabpanel" aria-labelledby="nav-places-tab">
                         <form action="#" method="get">
+                            <!-- <div class="col-12 col-md-10">
+                                <input type="text" name="name" class="form-control" placeholder="Keyword">
+                            </div> -->
                             <select class="custom-select" id="destinations">
                                 <option selected>Your Destinations</option>
-                                <option value="1">New York</option>
-                                <option value="2">Latvia</option>
-                                <option value="3">Dhaka</option>
-                                <option value="4">Melbourne</option>
-                                <option value="5">London</option>
+                                <option value="1">Bangkok</option>
+                                <option value="2">Phra Nakhon Si Ayutthaya</option>
+                                <option value="3">Samut Prakan</option>
+                                <option value="4">Nonthaburi</option>
+                                <option value="5">Pathum Thani</option>
                             </select>
                             <select class="custom-select" id="catagories">
                                 <option selected>All Catagories</option>
-                                <option value="1">Catagories 1</option>
-                                <option value="2">Catagories 2</option>
-                                <option value="3">Catagories 3</option>
-                                <option value="3">Catagories 4</option>
+                                <option value="1">Restaurants</option>
+                                <option value="2">Shopping</option>
+                                <option value="3">Hotels</option>
                             </select>
-                            <select class="custom-select" id="price-range">
+                            <!-- <select class="custom-select" id="price-range">
                                 <option selected>Price Range</option>
                                 <option value="1">$100 - $499</option>
                                 <option value="2">$500 - $999</option>
                                 <option value="3">$1000 - $4999</option>
                                 <option value="3">$5000+</option>
-                            </select>
-                            <select class="custom-select" id="proximity">
+                            </select> -->
+                            <!-- <select class="custom-select" id="proximity">
                                 <option selected>Proximity</option>
                                 <option value="1">Proximity 1</option>
                                 <option value="2">Proximity 2</option>
                                 <option value="3">Proximity 3</option>
                                 <option value="3">Proximity 4</option>
                                 <option value="3">Proximity 5</option>
-                            </select>
+                            </select> -->
                             <div class="row mt-md-5 mt-0">
                                 <div class="col-12 col-xl-6">
                                     <label class="custom-control custom-checkbox mb-3">
@@ -169,7 +171,7 @@
                                     <label class="custom-control custom-checkbox mb-3">
                                         <input type="checkbox" class="custom-control-input">
                                         <span class="custom-control-indicator"></span>
-                                        <span class="custom-control-description">Bike Parking</span>
+                                        <span class="custom-control-description">Accepts Cash</span>
                                     </label>
                                 </div>
                                 <div class="col-12 col-xl-6">
@@ -183,35 +185,14 @@
                                     <label class="custom-control custom-checkbox mb-3">
                                         <input type="checkbox" class="custom-control-input">
                                         <span class="custom-control-indicator"></span>
-                                        <span class="custom-control-description">Reservations</span>
+                                        <span class="custom-control-description">Parking</span>
                                     </label>
                                 </div>
                                 <div class="col-12 col-xl-6">
                                     <label class="custom-control custom-checkbox mb-3">
                                         <input type="checkbox" class="custom-control-input">
                                         <span class="custom-control-indicator"></span>
-                                        <span class="custom-control-description">Privat Parking</span>
-                                    </label>
-                                </div>
-                                <div class="col-12 col-xl-6">
-                                    <label class="custom-control custom-checkbox mb-3">
-                                        <input type="checkbox" class="custom-control-input">
-                                        <span class="custom-control-indicator"></span>
-                                        <span class="custom-control-description">Smoking Area</span>
-                                    </label>
-                                </div>
-                                <div class="col-12 col-xl-6">
-                                    <label class="custom-control custom-checkbox mb-3">
-                                        <input type="checkbox" class="custom-control-input">
-                                        <span class="custom-control-indicator"></span>
-                                        <span class="custom-control-description">Wheelchair Accesible</span>
-                                    </label>
-                                </div>
-                                <div class="col-12 col-xl-6">
-                                    <label class="custom-control custom-checkbox mb-3">
-                                        <input type="checkbox" class="custom-control-input">
-                                        <span class="custom-control-indicator"></span>
-                                        <span class="custom-control-description">Coupons</span>
+                                        <span class="custom-control-description">Michelin Guide</span>
                                     </label>
                                 </div>
                             </div>
@@ -222,11 +203,11 @@
                         <form action="#" method="get">
                             <select class="custom-select" id="events-destinations">
                                 <option selected>Your Destinations</option>
-                                <option value="1">New York</option>
-                                <option value="2">Latvia</option>
-                                <option value="3">Dhaka</option>
-                                <option value="4">Melbourne</option>
-                                <option value="5">London</option>
+                                <option value="1">Bangkok</option>
+                                <option value="2">Phra Nakhon Si Ayutthaya</option>
+                                <option value="3">Samut Prakan</option>
+                                <option value="4">Nonthaburi</option>
+                                <option value="5">Pathum Thani</option>
                             </select>
                             <select class="custom-select" id="events-catagories">
                                 <option selected>All Catagories</option>
@@ -235,7 +216,7 @@
                                 <option value="3">Catagories 3</option>
                                 <option value="3">Catagories 4</option>
                             </select>
-                            <select class="custom-select" id="events-price-range">
+                            <!-- <select class="custom-select" id="events-price-range">
                                 <option selected>Price Range</option>
                                 <option value="1">$100 - $499</option>
                                 <option value="2">$500 - $999</option>
@@ -248,7 +229,7 @@
                                 <option value="2">Proximity 2</option>
                                 <option value="3">Proximity 3</option>
                                 <option value="3">Proximity 4</option>
-                                <option value="3">Proximity 5</option>
+                                <option value="3">Proximity 5</option> -->
                             </select>
                             <button type="submit" class="btn dorne-btn mt-50 bg-white text-dark"><i class="fa fa-search pr-2" aria-hidden="true"></i> Search</button>
                         </form>
@@ -260,15 +241,15 @@
             <div class="explore-search-result">
                 <!-- Single Features Area -->
                 <div class="single-features-area">
-                    <img src="img/bg-img/feature-1.jpg" alt="">
+                    <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P02000185_3.jpeg" alt="">
                     <!-- Price -->
                     <div class="price-start">
-                        <p>FROM $59/night</p>
+                        <p>FROM 2800-9000 THB</p>
                     </div>
                     <div class="feature-content d-flex align-items-center justify-content-between">
                         <div class="feature-title">
-                            <h5>Ibiza</h5>
-                            <p>Party</p>
+                            <h5>Lantana Resort</h5>
+                            <p>Bangkok</p>
                         </div>
                         <div class="feature-favourite">
                             <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -277,15 +258,15 @@
                 </div>
                 <!-- Single Features Area -->
                 <div class="single-features-area">
-                    <img src="img/bg-img/feature-2.jpg" alt="">
+                    <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P02012360_1.jpg" alt="">
                     <!-- Price -->
                     <div class="price-start">
-                        <p>FROM $59/night</p>
+                        <p>FROM 500-3000 THB</p>
                     </div>
                     <div class="feature-content d-flex align-items-center justify-content-between">
                         <div class="feature-title">
-                            <h5>Paris</h5>
-                            <p>Luxury</p>
+                            <h5>The Countryside Resort</h5>
+                            <p>Maehongson</p>
                         </div>
                         <div class="feature-favourite">
                             <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -294,26 +275,26 @@
                 </div>
                 <!-- Single Features Area -->
                 <div class="single-features-area">
-                    <img src="img/bg-img/feature-3.jpg" alt="">
+                    <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013844_1.jpg" alt="">
                     <!-- Price -->
                     <div class="price-start">
-                        <p>FROM $59/night</p>
+                        <p>FROM 1000-3000 THB</p>
                     </div>
-                    <div class="feature-content d-flex align-items-center justify-content-between">
-                        <div class="feature-title">
-                            <h5>Lake Como</h5>
-                            <p>Spectacular</p>
-                        </div>
+                        <div class="feature-content d-flex align-items-center justify-content-between">
+                                <div class="feature-title">
+                                    <h5>Krabifrontbay Resort</h5>
+                                    <p>Krabi</p>
+                                </div>
                         <div class="feature-favourite">
                             <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                         </div>
                     </div>
                 </div>
                 <!-- Single Features Area -->
-                <div class="single-features-area">
-                    <img src="img/bg-img/feature-4.jpg" alt="">
+                <!-- <div class="single-features-area">
+                    <img src="img/bg-img/feature-4.jpg" alt=""> -->
                     <!-- Price -->
-                    <div class="price-start">
+                    <!-- <div class="price-start">
                         <p>FROM $59/night</p>
                     </div>
                     <div class="feature-content d-flex align-items-center justify-content-between">
@@ -325,7 +306,7 @@
                             <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
         <!-- Explore Map Area -->
@@ -342,7 +323,7 @@
                     <div class="footer-text">
                         <p>
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+<!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
