--- a/views/index.ejs
+++ b/views/index.ejs
@@ -168,16 +168,17 @@
                                     </select>
                                     <select class="custom-select">
                                         <option selected>All Catagories</option>
-                                        <option value="1">Catagories 1</option>
-                                        <option value="2">Catagories 2</option>
-                                        <option value="3">Catagories 3</option>
+                                        <option value="1">Restaurant</option>
+                                        <option value="2">Accommodation</option>
+                                        <option value="3">Attraction</option>
+                                        <option value="4">Other</option>
                                     </select>
-                                    <select class="custom-select">
+                                    <!-- <select class="custom-select">
                                         <option selected>Price Range</option>
                                         <option value="1">$100 - $499</option>
                                         <option value="2">$500 - $999</option>
                                         <option value="3">$1000 - $4999</option>
-                                    </select>
+                                    </select> -->
                                     <button type="submit" class="btn dorne-btn"><i class="fa fa-search pr-2" aria-hidden="true"></i> Search</button>
                                 </form>
                             </div>
