--- a/views/listing.ejs
+++ b/views/listing.ejs
@@ -117,8 +117,8 @@
                 <div class="col-12">
                     <div class="section-heading dark text-center">
                         <span></span>
-                        <h4>Featured destinations</h4>
-                        <p>Editor’s pick</p>
+                        <h4>Restaurant</h4>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -127,15 +127,15 @@
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-features-area mb-50">
                         <!-- <img src="img/bg-img/feature-1.jpg" alt=""> -->
-                        <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Thumbnail/P08002674.png" alt="">
+                        <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08012272_1.jpeg" alt="">
                         <!-- Price -->
                         <div class="price-start">
-                            <p>FROM $59/night</p>
+                            <p></p>
                         </div>
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5>Ibiza</h5>
-                                <p>Party</p>
+                                <h5>Treat Cafe & Hang Out</h5>
+                                <p>Bangkok</p>
                             </div>
                             <div class="feature-favourite">
                                 <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -147,15 +147,15 @@
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-features-area mb-50">
                         <!-- <img src="img/bg-img/feature-2.jpg" alt=""> -->
-                        <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Thumbnail/P08000934.jpeg" alt="">
+                        <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013955_1.png" alt="">
                         <!-- Price -->
                         <div class="price-start">
-                            <p>FROM $59/night</p>
+                            <p></p>
                         </div>
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5>Paris</h5>
-                                <p>Luxury</p>
+                                <h5>Cafe Jardin</h5>
+                                <p>Bangkok</p>
                             </div>
                             <div class="feature-favourite">
                                 <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -167,15 +167,15 @@
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-features-area mb-50">
                         <!-- <img src="img/bg-img/feature-3.jpg" alt=""> -->
-                        <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Thumbnail/P08002332.png" alt="">
+                        <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013903_1.png" alt="">
                         <!-- Price -->
                         <div class="price-start">
-                            <p>FROM $59/night</p>
+                            <p></p>
                         </div>
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5>Lake Como</h5>
-                                <p>Spectacular</p>
+                                <h5>SEIRYU Sushi</h5>
+                                <p>Bangkok</p>
                             </div>
                             <div class="feature-favourite">
                                 <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -186,15 +186,15 @@
                 <!-- Single Features Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-features-area mb-50">
-                        <img src="img/bg-img/feature-4.jpg" alt="">
+                        <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08013963_1.png" alt="">
                         <!-- Price -->
                         <div class="price-start">
-                            <p>FROM $59/night</p>
+                            <p></p>
                         </div>
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5>Greece</h5>
-                                <p>Sunny</p>
+                                <h5>9ban Cafe & Kanom Thai</h5>
+                                <p>Songkla</p>
                             </div>
                             <div class="feature-favourite">
                                 <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -205,15 +205,15 @@
                 <!-- Single Features Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-features-area mb-50">
-                        <img src="img/bg-img/feature-5.jpg" alt="">
+                        <img src="https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013835_1.jpg" alt="">
                         <!-- Price -->
                         <div class="price-start">
-                            <p>FROM $59/night</p>
+                            <p></p>
                         </div>
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5>Norway</h5>
-                                <p>All Year round</p>
+                                <h5>Bicycle Cafe</h5>
+                                <p>Kanjanaburi</p>
                             </div>
                             <div class="feature-favourite">
                                 <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -224,15 +224,15 @@
                 <!-- Single Features Area -->
                 <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-features-area mb-50">
-                        <img src="img/bg-img/feature-1.jpg" alt="">
+                        <img src="https://tatapi.tourismthailand.org/tatfs/Image/CustomPOI/Picture/P08012291_1.png" alt="">
                         <!-- Price -->
                         <div class="price-start">
-                            <p>FROM $59/night</p>
+                            <p></p>
                         </div>
                         <div class="feature-content d-flex align-items-center justify-content-between">
                             <div class="feature-title">
-                                <h5>Ibiza</h5>
-                                <p>Party</p>
+                                <h5>100 Mahaseth</h5>
+                                <p>Bangkok</p>
                             </div>
                             <div class="feature-favourite">
                                 <a href="#"><i class="fa fa-heart-o" aria-hidden="true"></i></a>
@@ -241,11 +241,11 @@
                     </div>
                 </div>
                 <!-- Single Features Area -->
-                <div class="col-12 col-sm-6 col-lg-4">
+                <!-- <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-features-area mb-50">
-                        <img src="img/bg-img/feature-2.jpg" alt="">
+                        <img src="img/bg-img/feature-2.jpg" alt=""> -->
                         <!-- Price -->
-                        <div class="price-start">
+                        <!-- <div class="price-start">
                             <p>FROM $59/night</p>
                         </div>
                         <div class="feature-content d-flex align-items-center justify-content-between">
@@ -258,13 +258,13 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- Single Features Area -->
-                <div class="col-12 col-sm-6 col-lg-4">
+                <!-- <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-features-area mb-50">
-                        <img src="img/bg-img/feature-3.jpg" alt="">
+                        <img src="img/bg-img/feature-3.jpg" alt=""> -->
                         <!-- Price -->
-                        <div class="price-start">
+                        <!-- <div class="price-start">
                             <p>FROM $59/night</p>
                         </div>
                         <div class="feature-content d-flex align-items-center justify-content-between">
@@ -277,13 +277,13 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <!-- Single Features Area -->
-                <div class="col-12 col-sm-6 col-lg-4">
+                <!-- <div class="col-12 col-sm-6 col-lg-4">
                     <div class="single-features-area mb-50">
-                        <img src="img/bg-img/feature-4.jpg" alt="">
+                        <img src="img/bg-img/feature-4.jpg" alt=""> -->
                         <!-- Price -->
-                        <div class="price-start">
+                        <!-- <div class="price-start">
                             <p>FROM $59/night</p>
                         </div>
                         <div class="feature-content d-flex align-items-center justify-content-between">
@@ -296,7 +296,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
@@ -310,7 +310,7 @@
                     <div class="footer-text">
                         <p>
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+<!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
