--- a/views/single-listing.ejs
+++ b/views/single-listing.ejs
@@ -107,15 +107,15 @@
     <!-- ***** Header Area End ***** -->
 
     <!-- ***** Breadcumb Area Start ***** -->
-    <div class="breadcumb-area height-700 bg-img bg-overlay" style="background-image: url(img/bg-img/breadcumb.jpg)">
+    <div class="breadcumb-area height-700 bg-img bg-overlay" style="background-image: url(https://tatapi.tourismthailand.org/tatfs/IMAGE/CustomPOI/Picture/P08013835_1.jpg)">
         <div class="container">
             <div class="row">
                 <div class="col-12">
                     <div class="breadcumb-content">
                         <div class="map-ratings-review-area d-flex">
-                            <a href="#" class="d-flex align-items-center justify-content-center"><img src="img/core-img/map.png" alt=""></a>
+                            <a href="#lomap" class="d-flex align-items-center justify-content-center"><img src="img/core-img/map.png" alt=""></a>
                             <a href="#">8.7</a>
-                            <a href="#">Write a review</a>
+                            <!-- <a href="#">Write a review</a> -->
                         </div>
                     </div>
                 </div>
@@ -133,23 +133,23 @@
                     <div class="single-listing-content">
 
                         <div class="listing-title">
-                            <h4>Burger House soho</h4>
-                            <h6>First Avenue no 83</h6>
+                            <h4>Bicycle Cafe</h4>
+                            <h6>เมืองกาญจนบุรี กาญจนบุรี</h6>
                         </div>
 
                         <div class="single-listing-nav">
                             <nav>
                                 <ul id="listingNav">
                                     <li class="active"><a href="#overview">Overview</a></li>
-                                    <li><a href="#menu">Menu</a></li>
-                                    <li><a href="#review">Reviews</a></li>
+                                    <!-- <li><a href="#menu">Menu</a></li>
+                                    <li><a href="#review">Reviews</a></li> -->
                                     <li><a href="#lomap">Location on map</a></li>
                                 </ul>
                             </nav>
                         </div>
 
                         <div class="overview-content mt-50" id="overview">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac nibh sed mi ullamcorper rhoncus. Curabitur pulvinar vel augue sit amet vestibulum. Proin tempus lacus porta lorem blandit aliquam eget quis ipsum. Vivamus accumsan consequat ligula non volutpat. Sed mollis orci non cursus vestibulum. Pellentesque vitae est a augue laoreet venenatis sed eu felis. Sed cursus magna nec turpis ullamcorper, eget rutrum felis egestas. Nunc odio ex, fermentum efficitur nunc vitae, efficitur hendrerit diam. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac nibh sed mi ullamcorper rhoncus. Curabitur pulvinar vel augue sit amet vestibulum. Proin tempus lacus porta lorem blandit aliquam eget quis ipsum.</p>
+                            <p>Bicycle Cafe เป็นร้านอาหารที่จำหน่ายอาหารมากมายหลายชนิด ไม่ว่าจะเป็น อาหารไทย อย่างเช่น แกงพะแนง ข้าวผัด ข้าวผัดกะเพรา หรือจะเป็นอาหารนานาชาติก็อย่างเช่นเบอร์เกอร์ที่มีให้เลือกมากมาย ซี่โครงย่าง แคลิฟอเนียโรล ซึ่งเป็นที่ถูกใจของบรรดานักท่องเที่ยวเป้นอย่างมาก และถ้าหากปั่นจักรยานมาเองทางร้านลดให้ 10% บรรยากาศหน้าร้านนั่งดูต้นไม้ใหญ่สีเขียว เหมาะเเก่การนั่งหย่อนใจเป็นที่สุด</p>
                             <div class="row mt-5">
                                 <div class="col-6">
                                     <label class="custom-control custom-checkbox mb-3">
@@ -210,60 +210,60 @@
                             </div>
                         </div>
 
-                        <div class="listing-menu-area mt-100" id="menu">
-                            <h4>Menu</h4>
+                        <!-- <div class="listing-menu-area mt-100" id="menu"> -->
+                            <!-- <h4>Menu</h4> -->
                             <!-- Single Listing Menu -->
-                            <div class="single-listing-menu d-flex justify-content-between">
+                            <!-- <div class="single-listing-menu d-flex justify-content-between"> -->
                                 <!-- Listing Menu Title -->
-                                <div class="listing-menu-title">
-                                    <h6>Classic Burger</h6>
-                                    <p>Beef, salad, mustard, bacon, mayonnaise, spicey relish, cheese</p>
-                                </div>
+                                <!-- <div class="listing-menu-title"> -->
+                                    <!-- <h6>Classic Burger</h6> -->
+                                    <!-- <p>Beef, salad, mustard, bacon, mayonnaise, spicey relish, cheese</p> -->
+                                <!-- </div> -->
                                 <!-- Listing Menu Price -->
-                                <div class="listing-menu-price">
+                                <!-- <div class="listing-menu-price">
                                     <h6>$9,90</h6>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- Single Listing Menu -->
-                            <div class="single-listing-menu d-flex justify-content-between">
+                            <!-- <div class="single-listing-menu d-flex justify-content-between"> -->
                                 <!-- Listing Menu Title -->
-                                <div class="listing-menu-title">
+                                <!-- <div class="listing-menu-title">
                                     <h6>House Special Burger</h6>
                                     <p>Beef, salad, mustard, bacon, mayonnaise, spicey relish, cheese</p>
-                                </div>
+                                </div> -->
                                 <!-- Listing Menu Price -->
-                                <div class="listing-menu-price">
+                                <!-- <div class="listing-menu-price">
                                     <h6>$9,90</h6>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- Single Listing Menu -->
-                            <div class="single-listing-menu d-flex justify-content-between">
+                            <!-- <div class="single-listing-menu d-flex justify-content-between"> -->
                                 <!-- Listing Menu Title -->
-                                <div class="listing-menu-title">
+                                <!-- <div class="listing-menu-title">
                                     <h6>Classic Burger</h6>
                                     <p>Beef, salad, mustard, bacon, mayonnaise, spicey relish, cheese</p>
-                                </div>
+                                </div> -->
                                 <!-- Listing Menu Price -->
-                                <div class="listing-menu-price">
+                                <!-- <div class="listing-menu-price">
                                     <h6>$9,90</h6>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- Single Listing Menu -->
-                            <div class="single-listing-menu d-flex justify-content-between">
+                            <!-- <div class="single-listing-menu d-flex justify-content-between"> -->
                                 <!-- Listing Menu Title -->
-                                <div class="listing-menu-title">
+                                <!-- <div class="listing-menu-title">
                                     <h6>House Special Burger</h6>
                                     <p>Beef, salad, mustard, bacon, mayonnaise, spicey relish, cheese</p>
-                                </div>
+                                </div> -->
                                 <!-- Listing Menu Price -->
-                                <div class="listing-menu-price">
+                                <!-- <div class="listing-menu-price">
                                     <h6>$9,90</h6>
                                 </div>
-                            </div>
-                            <a href="#" class="btn dorne-btn mt-50">+ See The Menu</a>
-                        </div>
+                            </div> -->
+                            <!-- <a href="#" class="btn dorne-btn mt-50">+ See The Menu</a> -->
+                        <!-- </div> -->
 
-                        <div class="listing-reviews-area mt-100" id="review">
+                        <!-- <div class="listing-reviews-area mt-100" id="review">
                             <h4>reviews</h4>
                             <div class="single-review-area">
                                 <div class="reviewer-meta d-flex align-items-center">
@@ -309,7 +309,7 @@
                                     <p>12 November 2017</p>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                         <div class="location-on-map mt-50" id="lomap">
                             <h4>Location on map</h4>
@@ -326,12 +326,12 @@
                     <div class="listing-sidebar">
 
                         <!-- Listing Verify -->
-                        <div class="listing-verify">
+                        <!-- <div class="listing-verify">
                             <a href="#" class="btn dorne-btn w-100"><i class="fa fa-check pr-3"></i> Verified Listing</a>
-                        </div>
+                        </div> -->
 
                         <!-- Book A Table Widget -->
-                        <div class="book-a-table-widget mt-50">
+                        <!-- <div class="book-a-table-widget mt-50">
                             <h6>Book A Table</h6>
                             <form action="#" method="get">
                                 <select class="custom-select" id="destinations">
@@ -350,7 +350,7 @@
                             </select>
                                 <button type="submit" class="btn dorne-btn bg-white text-dark"><i class="fa fa-search pr-2" aria-hidden="true"></i> Search</button>
                             </form>
-                        </div>
+                        </div> -->
 
                         <!-- Opening Hours Widget -->
                         <div class="opening-hours-widget mt-50">
@@ -388,16 +388,16 @@
                         </div>
 
                         <!-- Author Widget -->
-                        <div class="author-widget mt-50 d-flex align-items-center">
+                        <!-- <div class="author-widget mt-50 d-flex align-items-center">
                             <img src="img/clients-img/1.jpg" alt="">
                             <div class="authors-name">
                                 <a href="#">James Smith</a>
                                 <p>The Author</p>
                             </div>
-                        </div>
+                        </div> -->
 
                         <!-- Contact Form -->
-                        <div class="contact-form contact-form-widget mt-50">
+                        <!-- <div class="contact-form contact-form-widget mt-50">
                             <h6>Contact Business</h6>
                             <form action="#">
                                 <div class="row">
@@ -415,7 +415,7 @@
                                     </div>
                                 </div>
                             </form>
-                        </div>
+                        </div> -->
 
                     </div>
                 </div>
@@ -432,7 +432,7 @@
                     <div class="footer-text">
                         <p>
                             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+<!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                         </p>
                     </div>
@@ -458,7 +458,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
     <!-- All Plugins js -->
     <script src="js/others/plugins.js"></script>
     <!-- Google Maps js -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDk9KNSL1jTv4MY9Pza6w8DJkpI_nHyCnk"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBdVg54QthqEizFpV7yGjQCJfHRFP3PnW0"></script>
     <script src="js/google-map/location-map-active.js"></script>
     <!-- Active JS -->
     <script src="js/active.js"></script>
